assets/app.css
/* ... */
  .js .mobile-toggle-wrapper[open].active .mobile-toggle span:nth-child(3) {
    transform: rotateZ(-45deg) translateY(1px); }
  .mobile-toggle-wrapper summary::-webkit-details-marker {
    display: none; }

.mobile-toggle {
  display: inline-flex;
  position: relative;
  width: 48px;
  height: 48px;
  margin-left: -15px;
  display: flex;
  align-items: center;
  justify-content: center; }
  .mobile-toggle span {
    width: 18px;
    height: 1.5px;
    background: var(--color-header-icons, --color-accent);
    position: absolute;
    border-radius: 1px;
    top: 18px;
    left: 15px; }
    .mobile-toggle span:nth-child(1) {
      transform-origin: top left; }
    .mobile-toggle span:nth-child(2) {
      top: 23px; }
    .mobile-toggle span:nth-child(3) {
      transform-origin: top left;
      top: 28px; }

.mobile-menu-drawer {
  display: none;
  opacity: 0;
  visibility: hidden; }

.full-menu {
  display: none;
  margin: 0 auto;
  max-width: 100%; }
  @media only screen and (min-width: 1068px) {
    .full-menu {
      display: inline-flex; } }

.thb-full-menu {
  margin: 0;
  padding: 0;
  list-style: none;
  text-align: center;
  font-size: 0.9375rem; }
  .thb-full-menu a {
    color: var(--color-header-links, --color-accent);
    position: relative;
    font-size: calc(var(--font-navigation-scale, 1) * 15px); }
    .navigation-uppercase-true .thb-full-menu a {
      text-transform: uppercase; }
    .thb-full-menu a:after {
      content: "";
      display: block;
      position: absolute;
      top: 100%;
      left: 0;
      width: 100%;
      will-change: transform;
      height: 1px;
      transform: scale(0, 1);
      transform-origin: left center;
      background: var(--color-header-links-hover, --color-accent); }
    .thb-full-menu a:hover, .thb-full-menu a:focus {
      color: var(--color-header-links-hover, --color-accent2); }
      .thb-full-menu a:hover:after, .thb-full-menu a:focus:after {
        transform: scale(1, 1); }
      .thb-full-menu a:hover svg path, .thb-full-menu a:focus svg path {
        stroke: var(--color-header-links-hover, --color-accent2); }
  .thb-full-menu > li {
    display: inline-flex;
    padding: 0 15px;
    align-items: center; }
    .thb-full-menu > li > a {
      margin: 10px 0;
      font-weight: var(--font-body-medium-weight, 500); }
  .thb-full-menu li.menu-item-has-children {
    position: relative;
    z-index: 1; }
    .thb-full-menu li.menu-item-has-children:hover {
      z-index: 2; }
      .thb-full-menu li.menu-item-has-children:hover > .sub-menu {
        visibility: visible;
        opacity: 1; }
      .thb-full-menu li.menu-item-has-children:hover:before {
        content: attr(data-item-title);
        position: absolute;
        height: 100%;
        top: 0;
        margin-left: -30px;
        padding-left: 30px;
        padding-right: 30px;
        opacity: 0; }
    .thb-full-menu li.menu-item-has-children.left-submenu .sub-menu {
      left: auto;
      right: calc(100% + 35px); }
    .thb-full-menu li.menu-item-has-children.menu-item-has-megamenu {
      position: static; }
      .thb-full-menu li.menu-item-has-children.menu-item-has-megamenu .sub-menu {
        left: 0;
        right: 0;
        border-top: 1px solid var(--color-header-border, var(--color-border));
        box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1); }
      .thb-full-menu li.menu-item-has-children.menu-item-has-megamenu .sub-menu.mega-menu-container .mega-menu-promotion img {
        transform: scale(1.02); }
      .thb-full-menu li.menu-item-has-children.menu-item-has-megamenu .sub-menu.mega-menu-container .mega-menu-promotion:hover img {
        transform: scale(1.05); }
    .thb-full-menu li.menu-item-has-children > a {
      padding-right: 15px;
      position: relative; }
      .thb-full-menu li.menu-item-has-children > a:focus + .sub-menu {
        display: block;
        opacity: 1;
        visibility: visible;
        transform: translateY(0px); }
      .thb-full-menu li.menu-item-has-children > a svg {
        position: absolute;
        top: 50%;
        right: 0;
        margin-top: -3px; }
    .thb-full-menu li.menu-item-has-children:focus-within {
      z-index: 2; }
      .thb-full-menu li.menu-item-has-children:focus-within > .sub-menu {
        display: block;
        opacity: 1;
        visibility: visible; }
        .thb-full-menu li.menu-item-has-children:focus-within > .sub-menu.mega-menu-container {
          display: flex; }
  .thb-full-menu .sub-menu {
    position: absolute;
    top: 100%;
    left: -15px;
    font-size: calc(var(--font-navigation-scale, 1) * 14px);
    line-height: 1;
    padding: 22px 30px;
    background: var(--color-header-bg, #fff);
    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
    list-style: none;
    margin: 0;
    text-align: left;
    white-space: nowrap;
    line-height: 1.1;
    min-width: 190px;
    opacity: 0;
    visibility: hidden; }
    .thb-full-menu .sub-menu a:not(.text-button):after {
      top: calc(100% - 3px); }
    .thb-full-menu .sub-menu ul {
      line-height: inherit; }
    .thb-full-menu .sub-menu li a {
      display: inline-block;
      padding-top: 5px;
      padding-bottom: 5px; }
    .thb-full-menu .sub-menu .sub-menu {
      top: -22px;
      left: calc(100% + 35px); }
    .thb-full-menu .sub-menu li.menu-item-has-children:hover:before {
      width: calc(100% + 65px); }
    .thb-full-menu .sub-menu.mega-menu-container {
      padding: 0;
      display: flex; }
  .thb-full-menu .mega-menu-columns {
    display: grid;
    grid-auto-columns: minmax(0, 1fr);
    grid-auto-flow: column;
    grid-column-gap: 20px;
    list-style: none;
    padding: 50px;
    margin: 0;
    white-space: initial;
    flex: 1; }
    @media only screen and (min-width: 1200px) {
      .thb-full-menu .mega-menu-columns {
        grid-column-gap: 30px; } }
    .thb-full-menu .mega-menu-columns ul {
      list-style: none;
      margin: 0;
      padding: 0; }
/* ... */

